--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -28,6 +28,7 @@
     opacity: 1;
     height: 90px;
     padding: 15px;
+    z-index: 999;
 
     background-color: #DDD;
 
